[package]
name = "linux-numlockctl"
version = "0.1.0"
edition = "2021"
description = "Easy way to trigger and get state of numlock in linux"
license = "MIT"

[[bin]]
name = "numlockctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.9"
uinput = "0.1.3"
