[package]
name = "numlockctl-linux"
version = "0.1.0"
edition = "2021"
description = "Easy way to trigger and get state of numlock in linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meghprkh/numlockctl-linux"
homepage = "https://github.com/meghprkh/numlockctl-linux"

[[bin]]
name = "numlockctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.9"
uinput = "0.1.3"
